alt duplicates merge algorithm